# pydumpling

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  test.sh  tox.ini
.github/workflows/: tests.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  tutorial.rst
pydumpling/: __init__.py  cli.py  debug_dumpling.py  fake_types.py  helpers.py  pydumpling.py  rpdb.py  vis.py
pydumpling/templates/: traceback.html
tests/: test_cli.py  test_debug.py  test_debug_dumpling.py  test_dump.py  test_fake_types.py  test_helpers.py  test_pydumpling.py  test_rpdb.py
