[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = {composite = ["pdm install", "flake8 ./pydumpling ./tests", "pytest tests/"]}
docs = {shell = "cd docs && make html"}  # build sphinx docs
docs_export = { shell = "pdm export -G doc -o docs/requirements.txt --without-hashes" }  # export requirements for docs
docs_preview = {shell = 'python -m http.server -d docs\build\html'}

[tool.pdm.build]
includes = ["pydumpling/*.py"]

[tool.pdm.dev-dependencies]
test = [
    "pytest-order>=1.2.0",
    "flake8>=5.0.4",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "pydumpling"
version = "0.1.4"
description = "Python post-mortem debugger"
authors = [
    {name = "cocolato", email = "haiizhu@outlook.com"},
]
dependencies = [
    "dill<1.0.0,>=0.3.2",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}


[project.urls]
homepage = "https://github.com/cocolato/pydumpling"

[project.optional-dependencies]
doc = [
    "sphinx>=4.3.2",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-tabs>=3.4.5",
    "sphinx-copybutton>=0.5.2",
]
