[project]
name = "pydumpling"
version = "0.1.6"
description = "Python post-mortem debugger"
authors = [
    {name = "cocolato", email = "haiizhu@outlook.com"},
]
dependencies = [
    "dill<1.0.0,>=0.3.2",
    "packaging>=24.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}


[project.urls]
homepage = "https://github.com/cocolato/pydumpling"

[project.optional-dependencies]
doc = [
    "sphinx>=4.3.2",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-tabs>=3.4.5",
    "sphinx-copybutton>=0.5.2",
]

[dependency-groups]
dev = [
    "flake8>=3.9.2",
    "hatch>=1.7.0",
    "pytest-cov>=4.1.0",
    "pytest-order>=1.3.0",
    "tox>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["pydumpling/*.py"]

[tool.hatch.build.targets.wheel]
include = ["pydumpling/*.py"]

[tool.hatch.envs.default.scripts]
test = [
"flake8 ./pydumpling ./tests",
"pytest --cov=pydumpling --cov-report=term-missing tests/"
]
docs = "cd docs && make html"
docs_export = "uv pip compile pyproject.toml --extra doc -o docs/requirements.txt"
docs_preview = "python -m http.server -d docs/build/html"

